--- a/app/src/main/resources/application-dev.yaml
+++ b/app/src/main/resources/application-dev.yaml
@@ -5,3 +5,9 @@ server:
     include-binding-errors: on_param
     include-stacktrace: on_param
     include-message: always
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
