--- a/app/src/main/resources/application-dev.yaml
+++ b/app/src/main/resources/application-dev.yaml
@@ -11,3 +11,9 @@ management:
     web:
       exposure:
         include: "*"
+
+logging:
+  pattern:
+    dateformat: "HH:mm:ss.SSS"
+    console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(-->){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
+
