Add clients properties

--- a/app/src/main/resources/application.yaml
+++ b/app/src/main/resources/application.yaml
@@ -6,3 +6,8 @@ management:
     web:
       exposure:
         include: "*"
+
+clients:
+  aviation:
+    url: "http://api.aviationstack.com/v1"
+    apikey: "978e6ce10f72b50aa9b16bda8794dc9f"
