--- a/app/src/main/resources/application-dev.yaml
+++ b/app/src/main/resources/application-dev.yaml
@@ -17,3 +17,7 @@ logging:
     dateformat: "HH:mm:ss.SSS"
     console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(-->){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
 
+clients:
+  aviation:
+    url: "http://api.aviationstack.com/v1"
+    apikey: "978e6ce10f72b50aa9b16bda8794dc9f"
