Setup loggin level

--- a/app/src/main/resources/application-dev.yaml
+++ b/app/src/main/resources/application-dev.yaml
@@ -16,6 +16,11 @@ logging:
   pattern:
     dateformat: "HH:mm:ss.SSS"
     console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(-->){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
+  level:
+    com:
+      crowd:
+        it:
+          AppKt: INFO
 
 clients:
   aviation:
